NIFI-13590 Refactored Standard Processors using current API methods
This closes #9119

Signed-off-by: David Handermann <exceptionfactory@apache.org>