@@ -33,15 +33,11 @@ import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
-import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.util.StandardValidators;
 import org.apache.nifi.processors.standard.sql.DefaultAvroSqlWriter;
 import org.apache.nifi.processors.standard.sql.SqlWriter;
 import org.apache.nifi.util.db.JdbcCommon;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -147,27 +143,26 @@ public class ExecuteSQL extends AbstractExecuteSQL {
             .build();
 
     public ExecuteSQL() {
-        final Set<Relationship> r = new HashSet<>();
-        r.add(REL_SUCCESS);
-        r.add(REL_FAILURE);
-        relationships = Collections.unmodifiableSet(r);
-
-        final List<PropertyDescriptor> pds = new ArrayList<>();
-        pds.add(DBCP_SERVICE);
-        pds.add(SQL_PRE_QUERY);
-        pds.add(SQL_SELECT_QUERY);
-        pds.add(SQL_POST_QUERY);
-        pds.add(QUERY_TIMEOUT);
-        pds.add(NORMALIZE_NAMES_FOR_AVRO);
-        pds.add(USE_AVRO_LOGICAL_TYPES);
-        pds.add(COMPRESSION_FORMAT);
-        pds.add(DEFAULT_PRECISION);
-        pds.add(DEFAULT_SCALE);
-        pds.add(MAX_ROWS_PER_FLOW_FILE);
-        pds.add(OUTPUT_BATCH_SIZE);
-        pds.add(FETCH_SIZE);
-        pds.add(AUTO_COMMIT);
-        propDescriptors = Collections.unmodifiableList(pds);
+        relationships = Set.of(
+                REL_SUCCESS,
+                REL_FAILURE
+        );
+        propDescriptors = List.of(
+                DBCP_SERVICE,
+                SQL_PRE_QUERY,
+                SQL_SELECT_QUERY,
+                SQL_POST_QUERY,
+                QUERY_TIMEOUT,
+                NORMALIZE_NAMES_FOR_AVRO,
+                USE_AVRO_LOGICAL_TYPES,
+                COMPRESSION_FORMAT,
+                DEFAULT_PRECISION,
+                DEFAULT_SCALE,
+                MAX_ROWS_PER_FLOW_FILE,
+                OUTPUT_BATCH_SIZE,
+                FETCH_SIZE,
+                AUTO_COMMIT
+        );
     }
 
     @Override
