@@ -16,19 +16,18 @@
  */
 package org.apache.nifi.processors.standard.db.impl;
 
-import java.sql.JDBCType;
-import java.sql.Types;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 import org.apache.commons.lang3.StringUtils;
 import org.apache.nifi.processors.standard.db.ColumnDescription;
 import org.apache.nifi.processors.standard.db.DatabaseAdapter;
 import org.apache.nifi.processors.standard.db.TableSchema;
+
+import java.sql.JDBCType;
+import java.sql.Types;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import static java.sql.Types.CHAR;
 import static java.sql.Types.CLOB;
@@ -224,7 +223,7 @@ public class Oracle12DatabaseAdapter implements DatabaseAdapter {
                 .append(String.join(", ", columnsAndDatatypes))
                 .append(") ");
 
-        return Collections.singletonList(createTableStatement.toString());
+        return List.of(createTableStatement.toString());
     }
 
     @Override
